# execution-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/vivarium/: Dockerfile
docker/vivarium/notebooks/: 01_vivarium_getting_started.ipynb  results.json
docs/contract-v1/: combined-contract-examples.md  combined-contract.md
docs/contract-v1/source-docs/: auth-auth.md  discovery-execution-contract.md  external-access.md  helxapp-controller.md  prompt.md
docs/kafka/: KubeExe-mermaid.md  appstore-execution-model.md  helxapp-controller-execution-model.md  prompt.md  reimplementation-analysis.md  unified-execution-model.md
helm/mism-exec/: Chart.yaml  values.yaml
helm/mism-exec/templates/: _helpers.tpl  deployment.yaml  (+4 more)
k8s/: deployment.yaml  ingress.yaml  namespace.yaml
scripts/: .env.example  config.py  seed_and_test.py  test_appstore_container.sh  test_batch_execution.py  test_deployed.py  test_interactive_session.py  test_no_volumes.py  test_real_k8s.py  test_real_k8s_quick.py  test_real_k8s_vivarium.py
src/: __init__.py  dependencies.py  main.py
src/core/: errors.py  logging.py  settings.py
src/middleware/: request_context.py
src/orchestration/: compute.py  kube.py  models.py  stub.py
src/schemas/: enums.py  poc.py  runs.py  types.py
src/services/: appstore_client.py  dal_service.py  run_service.py  vivarium_service.py
tests/: conftest.py  test_dal_service.py  test_orchestration.py  test_poc_api.py  test_runs_api.py  test_services.py
(+4 files in other folders)
